--- a/pom.xml
+++ b/pom.xml
@@ -52,11 +52,29 @@
     <build>
         <plugins>
             <!-- Spring Boot Plugin (Required for 'mvn spring-boot:run') -->
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>${spring-boot.version}</version>
+            <configuration>
+                <mainClass>com.snakegame.App</mainClass>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.13.0</version>
+            <configuration>
+                <source>8</source>
+                <target>8</target>
+                <!-- Optionally, set the encoding -->
+                <encoding>UTF-8</encoding>
+            </configuration>
+        </plugin>
         </plugins>
     </build>
+
+
+
 
 </project>
